@@ -20,29 +20,29 @@
 static mach_port_t io_port;
 
 static inline int
-intel_setup_io(void)
+intel_setup_io(struct pci_access *a)
 {
   mach_port_t device;
 
   if ((errno = get_privileged_ports(NULL, &device)))
-    perror("intel_setup_io() can't get_privileged_ports()");
+    a->warn("i386-io-hurd: Can't get_privileged_ports(): %m");
 
   if (!errno && (errno = device_open(device, D_READ | D_WRITE, "io", &io_port)))
-    perror("intel_setup_io() can't device_open()");
+    a->warn("i386-io-hurd: Can't device_open(): %m");
 
   mach_port_deallocate(mach_task_self(), device);
 
   if (!errno && (errno = i386_io_port_add(mach_thread_self(), io_port)))
-    perror("intel_setup_io() can't i386_io_port_add()");
+    a->warn("i386-io-hurd: Can't i386_io_port_add(): %m");
 
   return errno ? 0 : 1;
 }
 
 static inline int
-intel_cleanup_io(void)
+intel_cleanup_io(struct pci_access *a)
 {
   if ((errno = i386_io_port_remove(mach_thread_self(), io_port)))
-    perror("intel_cleanup_io() can't i386_io_port_remove()");
+    a->warn("i386-io-hurd: Can't i386_io_port_remove(): %m");
 
   mach_port_deallocate(mach_task_self(), io_port);
 
